# akismet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  README.txt  akismet.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  test_akismet.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  async_client.rst  conf.py  exceptions.rst  faq.rst  index.rst  install.rst  make.bat  misc.rst  overview.rst  spelling_wordlist.txt  sync_client.rst  testing.rst  upgrade.rst  usage.rst
src/: akismet.py
src/akismet/: __init__.py  _async_client.py  _common.py  _exceptions.py  _legacy_client.py  _sync_client.py  _version.py
test/: test_akismet.py
tests/: base.py  end_to_end.py  test_akismet.py  test_async_client.py  test_legacy_client.py  test_sync_client.py
