[metadata]
author = Michael Foord and James Bennett
author_email = james@b-list.org
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
description = A Python interface to the Akismet spam-filtering API.
license = BSD 3-Clause
long_description = file: README.rst
name = akismet
url = https://github.com/ubernostrum/akismet
version = 1.1a1

[options]
install_requires =
  requests
zip_safe = False

[files]
packages = find:

[coverage:run]
include = akismet.py

[coverage:report]
fail_under = 100

[flake8]
exclude = __pycache__,.pyc
ignore =
  E203,
  W503
max-line-length = 88

[isort]
known_first_party = akismet
known_third_party = mock
lines_after_imports = 2
