[metadata]
author = Michael Foord and James Bennett
author_email = james@b-list.org
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
description = A Python interface to the Akismet spam-filtering API.
license = BSD 3-Clause
long_description = file: README.rst
name = akismet
url = https://github.com/ubernostrum/akismet
version = 1.1

[options]
install_requires =
  requests
zip_safe = False

[files]
packages = find:

[coverage:run]
include = akismet.py

[coverage:report]
fail_under = 100

[flake8]
exclude = __pycache__,.pyc
ignore =
  E203,
  W503
max-line-length = 88

[isort]
known_first_party = akismet
known_third_party = mock
lines_after_imports = 2

[mypy]
# mypy has trouble with the methods that call the error handler and
# seems to think they need unreachable return statements after calling
# something guaranteed to raise an exception. Until that's worked
# around or fixed, disable the warning.
warn_no_return = False

[mypy-akismet]
# Main module gets stricter mypy checks.
disallow_untyped_defs = True
disallow_untyped_calls = True
