[metadata]
author = Michael Foord and James Bennett
author_email = james@b-list.org
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Utilities
description = A Python interface to the Akismet spam-filtering API.
license = BSD 3-Clause
long_description = file: README.rst
name = akismet
url = https://github.com/ubernostrum/akismet
version = 1.2

[options]
install_requires =
  requests
zip_safe = False

[files]
packages = find:

[coverage:run]
include = akismet.py

[coverage:report]
fail_under = 100

[flake8]
extend-ignore = E203
max-complexity = 13
max-line-length = 88

[isort]
known_first_party = akismet
known_third_party = mock
profile = black
